Fix T78124 Overlay: Image: Camera background image transparency not working

This changes to premultiplied blending for all cases and put the premult
in the shader.